--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "nodejs-starter",
   "version": "0.0.1",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/jamesnuge/swrpg-hex-server"
   },
-  "keywords": [
-    "nodejs"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "ws": "^7.3.1"
   }
