made npm start the main script. run now uses nodemon

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "run": "nodemon index.js"
   },
   "repository": {
     "type": "git",
